# Proactive-RAG-Onboarding-Agent

./: .env.example  README.md  pyproject.toml  requirements.txt
examples/: usage_example.py
examples/sample_documents/: engineering_guide.md  hr_policy.md  new_hire_checklist.md  sales_training.md
proactive_rag_agent/: __init__.py  cli.py
proactive_rag_agent/config/: __init__.py  loader.py  settings.py
proactive_rag_agent/core/: __init__.py  agent.py  curriculum_generator.py  document_processor.py
proactive_rag_agent/models/: __init__.py  curriculum.py  metadata.py  source.py
proactive_rag_agent/retrievers/: __init__.py  base_retriever.py  dual_retriever.py  metadata_retriever.py  semantic_retriever.py
proactive_rag_agent/utils/: __init__.py  export.py  logging_config.py  validation.py
