[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proactive-rag-onboarding-agent"
version = "0.1.0"
description = "Proactive RAG Agent for Tailored Corporate Onboarding"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "langchain>=0.0.350",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.13",
    "langchain-openai>=0.0.2",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "faiss-cpu>=1.7.4",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.2",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "PyYAML>=6.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pypdf>=3.0.0",
    "unstructured>=0.10.0",
    "python-docx>=0.8.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
onboarding-agent = "proactive_rag_agent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["proactive_rag_agent*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true